QUIC - expand server push test coverage and fix recent regression.

Fix regression after https://codereview.chromium.org/1877703002.

Add server push test to quic_network_transaction_unittest.cc that
without the above fix catches the regression.

R=rch@chromium.org
BUG=622043

Review-Url: https://codereview.chromium.org/2107353003
Cr-Commit-Position: refs/heads/master@{#403040}

Former-commit-id: 769733cda1cf53c42ded5b8610b80e107a72771f